tests/snapshots/test_runner__tests__compiler__typecheck__do_statement_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = (null: Null): Integer => 123

null.foo()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/do_statement_1.kk:3:1
  │
3 │ null.foo()
  │ ^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Null        | + Integer   |
    +---------------+-------------+
